# language-chat-be

./: README.md  nginx.txt  pyproject.toml
src/: llm_handler.py  main.py  services.py
src/config/: env_var.py
src/system_prompts/language_buddy/: language_buddy.txt
src/system_prompts/test_prompt/: test.txt
