[tool.poetry]
name = "chatbot-back-end"
version = "0.1.0"
description = ""
authors = ["Ahmad Selim ahmad22selim@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "0.115.12"
uvicorn = { version = "0.34.2", extras = ["standard"] }
litellm = "1.67.5"
openai = "1.76.2"
boto3 = "1.38.5"
motor = "^3.7.0"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
